--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../shared/tsconfig.json",
+  "extends": "../shared/configs/tsconfig.json",
   "compilerOptions": {
     "incremental": true,
     "target": "es6",
