--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../shared/tsconfig.json",
+  "extends": "../shared/configs/tsconfig.json",
   "compilerOptions": {
     "allowJs": true,
     "target": "es5",
