fix default branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,9 @@ name: Super-Linter
 # Run this workflow every time a new commit pushed to your repository
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ main ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ main ]
 jobs:
   # Set the job key. The key is displayed as the job name
   # when a job name is not provided
