--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "ci:backend": "cd backend && npm ci",
     "build:frontend": "cd frontend && npm run build",
     "build:backend": "cd backend && npm run build",
-    "buld": "npm run build:frontend && npm run build:backend",
+    "build": "npm run build:frontend && npm run build:backend",
     "test:frontend": "cd frontend && npm test -- --watchAll=false",
     "test:backend": "cd backend && npm test",
     "test": "npm run test:frontend && npm run test:backend"
