--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start": "tsc -w & nodemon build/index.js",
+    "start": "tsc -w & nodemon build/backend/src/index.js",
     "build": "tsc",
     "lint": "tsc --noEmit && eslint src/**/*.ts"
   },
@@ -14,12 +14,14 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
+    "@types/uuid": "^8.3.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuid": "^8.3.2"
   }
 }
