--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "fp-ts": "^2.9.5",
+    "monocle-ts": "^2.3.9",
+    "newtype-ts": "^0.3.4",
     "uuid": "^8.3.2"
   }
 }
