--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/parser": "^4.19.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "ts-jest": "^26.5.4",
