--- a/backend/package.json
+++ b/backend/package.json
@@ -18,14 +18,17 @@
     "@typescript-eslint/parser": "^4.19.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "prisma": "^2.19.0",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
   },
   "dependencies": {
+    "@prisma/client": "^2.19.0",
     "express": "^4.17.1",
     "fp-ts": "^2.9.5",
     "monocle-ts": "^2.3.9",
     "newtype-ts": "^0.3.4",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yargs": "^15.4.1"
   }
 }
