--- a/shared/tsconfig.json
+++ b/shared/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "es6",
     "module": "esnext",
     "lib": [
-      "es2015"
+      "es2015",
+      "dom"
     ],
     "outDir": "./build",
     "noImplicitAny": true,
