--- a/shared/package.json
+++ b/shared/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest && tsd ./src/ts-schema",
     "type-check": "tsc --noEmit",
     "lint": "npm run type-check && eslint src/**/*.ts"
   },
@@ -17,5 +17,8 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.3"
+  },
+  "dependencies": {
+    "tsd": "^0.14.0"
   }
 }
