changed backend port and ts. added migrate script

--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "start": "nodemon",
     "build": "tsc",
-    "lint": "tsc --noEmit && eslint src/**/*.ts"
+    "lint": "tsc --noEmit && eslint src/**/*.ts",
+    "migrate": "npx prisma migrate dev"
   },
   "author": "",
   "license": "ISC",
