--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "incremental": true,
     "target": "es6",
-    "module": "esnext",
+    "module": "commonjs",
     "lib": [
       "es2015"
     ],
