added HashRouter inside Router

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
-    "@types/jest": "^26.0.21"
+    "@types/jest": "^26.0.21",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
