--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/ramda": "^0.27.40",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/parser": "^4.19.0",
     "jest": "^26.6.3",
@@ -31,6 +32,7 @@
     "jsonwebtoken": "^8.5.1",
     "monocle-ts": "^2.3.9",
     "newtype-ts": "^0.3.4",
+    "ramda": "^0.27.1",
     "uuid": "^8.3.2",
     "yargs": "^15.4.1"
   }
