--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "nodemon",
-    "build": "tsc",
+    "build": "prisma generate && tsc",
     "lint": "tsc --noEmit && eslint src/**/*.ts",
     "migrate": "npx prisma migrate dev"
   },
